--- a/css-selectors/selectors.html
+++ b/css-selectors/selectors.html
@@ -13,10 +13,14 @@
 
             <p>Classes are ridiculously important, since they allow you to select arbitrary boxes in    your web pages.</p>
 
-            <p>We'll also be talking about links in this example, so here's <a href="https://   internetingishard.com">internetingishard</a> for us to style.</p>
+            <p>We'll also be talking about links in this example, so here's <a href="https://internetingishard.com">internetingishard</a> for us to style.</p>
     
-            <div class="button">Button One</div>
-            <div class="button call-to-action">Button Two</div>
+            <a class="button" href="nowhere.html">Button One</a>
+            <a class="button call-to-action" href="nowhere.html">Button Two</a>
+        </div>
+        <div class="sidebar">
+            <p>If this page had a sidebar...</p>
+            <p>We'd have some problems with pseudo-classes.</p>
         </div>
     </body>
 </html>
