--- a/css-selectors/selectors.html
+++ b/css-selectors/selectors.html
@@ -7,6 +7,8 @@
     </head>
     <body>
         <div class="page">
+            <a href="#button-2">Go to Button Two</a>
+
             <h1>CSS Selectors</h1>
 
             <p class="synopsis">CSS Selectors let you <em>select</em> individual HTML elements in an    HTML document. This is <strong>super</strong> useful.</p>
@@ -16,7 +18,7 @@
             <p>We'll also be talking about links in this example, so here's <a href="https://internetingishard.com">internetingishard</a> for us to style.</p>
     
             <a class="button" href="nowhere.html">Button One</a>
-            <a class="button call-to-action" href="nowhere.html">Button Two</a>
+            <a id="button-2" class="button call-to-action" href="nowhere.html">Button Two</a>
         </div>
         <div class="sidebar">
             <p>If this page had a sidebar...</p>
