--- a/floats/floats.html
+++ b/floats/floats.html
@@ -15,6 +15,13 @@
             </div>
         </div>
 
-        <div class="footer">Footer</div>
+        <div class="footer">
+            <div class="footer-item"></div>
+            <div class="footer-item"></div>
+            <div class="footer-item"></div>
+            <div class="footer-item"></div>
+            <div class="footer-item"></div>
+            <div class="footer-item"></div>
+        </div>
     </body>
 </html>
